test/patterns/s0455_assign_cookies/hafis/starchat/jml_syntax_checking.txt
./test/s0455_assign_cookies/hafis/starchat/Solution.java:10: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < s.length; ((s <= 230) && (s >= 1)));
                                                   ^
  first type:  int[]
  second type: int
./test/s0455_assign_cookies/hafis/starchat/Solution.java:10: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < s.length; ((s <= 230) && (s >= 1)));
                                                                 ^
  first type:  int[]
  second type: int
./test/s0455_assign_cookies/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < g.length; ((g <= 230) && (g >= 1)));
                                                   ^
  first type:  int[]
  second type: int
./test/s0455_assign_cookies/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < g.length; ((g <= 230) && (g >= 1)));
                                                                 ^
  first type:  int[]
  second type: int
4 errors
